# medinow

./: .env.example  README.md  main.py  pyproject.toml
backend/agents/: conversation.py  message_handlers.py  state_machine.py  whatsapp_client.py
backend/api/: README.md  fastapi_app.py  models.py  schemas.py
backend/api/services/: __init__.py  simple_composio_calendar_service.py
backend/integrations/composio_calendar/: create_events_gmail.py  get_gmail_token.py
backend/integrations/twilio/: alt_send_message.py  send_message.py  webhook_handler.py
backend/storage/: __init__.py  database.py
backend/tests/: test_api.py  test_both_approaches.py  test_fastapi.py  test_fastapi_init.py
backend/tests/api/: test_groq.py
data/: medinow.db
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  nginx.conf
docs/: requisitos.md
scripts/: docker-run  docker-run.sh  ngrok-setup  ngrok-setup.sh  test_phase1.py  test_whatsapp_webhook.py  validate_database.py
